# AI-GRIL-FRIEND

./: .gitignore  document.md  main.sql  readme.md
AI-Web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
Server/: .env  main.py  pyproject.toml
Server/ai-service/: .gitignore  pyproject.toml
Server/ai-service/app/core/: config.py  exceptions.py
Server/ai-service/app/core/agent/: agent_graph.py  prompt.py
Server/ai-service/app/core/agent/momery/: term_memory.py
Server/ai-service/app/core/agent/tools/: get_weather.py
Server/ai-service/app/model/: User.py
Server/ai-service/app/routers/: history.py  login.py  msg.py  user.py
Server/ai-service/app/utils/: history.py
Server/app/core/: config.py  database.py  exceptions.py  llm_config.py
Server/app/core/agent/: agent_graph.py  agent_main.py  prompt.py
Server/app/core/agent/momery/: term_memory.py
Server/app/core/agent/tools/: message.py  search_momery.py
Server/app/core/chain/: chain_main.py  llm_config.py  prompt.py
Server/app/core/chain/momery/: term_memory.py
Server/app/core/chain/tools/: message.py  search_momery.py
Server/app/dependencies/: is_code.py
Server/app/model/: Chat_msg.py  Memory.py  User.py  code.py
Server/app/routers/: history.py  login.py  msg.py  user.py
Server/app/schemas/: request.py  response.py
Server/app/test/: agent_test.py  embeddings.py  history.py  img_ai_test.py  list.py  llm.py  logger_test.py  passlibs.py  read_flie_test.py  serv.py  switch.py
Server/app/utils/: history.py  msg_list.py
Server/core-service/: .gitignore  pom.xml
Server/core-service/src/main/java/com/example/springboot_test/: SpringbootTestApplication.java
Server/core-service/src/main/java/com/example/springboot_test/DTO/: UserDto.java
Server/core-service/src/main/resources/: application.yml
Server/core-service/src/main/resources/mapper/: UserMpaaer.xml
Server/tests/: agent_test.py  llm.py
(+187 files in other folders)
