[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
